--- a/car.css
+++ b/car.css
@@ -1,1 +1,198 @@
+/* quests + contact */
+body{
+    margin: 0;
+    padding: 0;
+}
+.main{
+    width: 100%;
+    height: 1896px;
+    background-color:#1A1B1F;
+}
+.text{
+    color: #FFF;
+    text-align: center;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.sectext{
+    color: #FFF;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 177px;
+}
+.list_box1{
+    width: 1207px;
+    height: 82px;
+    background-color: #1A1B1F;
+    margin: auto;
+    margin-top: 70px;
+    color: #FFF;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 140%;
+    position: relative;
+}
+.list_box2{
+    width: 1207px;
+    height: 82px;
+    background-color: #1A242E;
+    margin: auto;
+    margin-top: 10px;
+    color: #FFF;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 140%;
+    position: relative;
+}
+.list_box3{
+    width: 1207px;
+    height: 82px;
+    background-color: #1A1B1F;
+    margin: auto;
+    margin-top: 10px;
+    color: #FFF;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 140%;
+    position: relative;
+}
+.list_box4{
+    width: 1207px;
+    height: 122px;
+    background-color: #1A242E;
+    margin: auto;
+    margin-top: 10px;
+    color: #FFF;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 140%;
+    position: relative;
+}
+.list_box5{
+    width: 1207px;
+    height: 82px;
+    background-color: #1A1B1F;
+    margin: auto;
+    margin-top: 10px;
+    color: #FFF;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 140%;
+    position: relative;
+}
+.list_box6{
+    width: 1207px;
+    height: 82px;
+    background-color: #1A242E;
+    margin: auto;
+    margin-top: 10px;
+    color: #FFF;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 140%;
+    position: relative;
+}
+#KO{
+    position: absolute;
+    top: 29px;
+    right: 20px;
+}
+.textt{
+    color: #4F6173;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 140%; /* 22.4px */
+    position: absolute;
+    top: 73px;
+    left: 20px;
+}
+.textt1{
+    position: absolute;
+    top: 31px;
+    left: 20px;
+}
+.textt2{
+    position: absolute;
+    top: 31px;
+    left: 20px;
+}
+.textt3{
+    position: absolute;
+    top: 31px;
+    left: 20px;
+}
+.textt4{
+    position: absolute;
+    top: 31px;
+    left: 20px;
+}
+.textt5{
+    position: absolute;
+    top: 31px;
+    left: 20px;
+}
+.textt6{
+    position: absolute;
+    top: 31px;
+    left: 20px;
+}
+.main_contact{
+    width: 1207px;
+    height: 615px;
+    background-color: chartreuse;
+    margin: auto;
+}
+.name{
+    color: #FFF;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 120%; /* 19.2px */
+    text-transform: capitalize;
+    position: absolute;
+    left: 671px;
+    margin-top: 46px;
+}
+.box1_contact{
+    width: 1207px;
+    height: 50px;
+    background-color: #151D25;
+    margin-top: 66px;
+}
+.email{
+    color: #FFF;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 120%; /* 19.2px */
+    text-transform: capitalize;
+    position: absolute;
+    left: 671px;
+    margin-top: 140px;
 
+}
+/* quests + contact */
