--- a/car.css
+++ b/car.css
@@ -142,7 +142,7 @@ select {
 }
 .list_box4{
     width: 1207px;
-    height: 122px;
+    height: 82px;
     background-color: #1A242E;
     margin: auto;
     margin-top: 10px;
@@ -186,17 +186,6 @@ select {
     position: absolute;
     top: 29px;
     right: 20px;
-}
-.textt{
-    color: #4F6173;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 140%; /* 22.4px */
-    position: absolute;
-    top: 73px;
-    left: 20px;
 }
 .textt1{
     position: absolute;
@@ -329,6 +318,142 @@ select {
     margin: auto;
     margin-top: 69px;
     border-radius: 5px;
+}
+.niz{
+    width: 100%;
+    height: 338.76px;
+    background-color: #101417;
+    position: relative;
+}
+.imgshka{
+    position: absolute;
+    left: 678px;
+    top: 62px;
+}
+.imgshka2{
+    position: absolute;
+    left: 721px;
+    top: 62px;
+}
+.textniz{
+    width: 388px;
+    height: 66.345px;
+    flex-shrink: 0;
+    color: var(--main-white, #FFF);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 140%; /* 22.4px */
+    position: absolute;
+    left: 678px;
+    top: 143px;
+}
+.displayimg{
+    display: flex;
+    gap: 30px;
+    position: absolute;
+    left: 678px;
+    top: 258px;
+}
+.tekst1{
+    color: var(--main-white, #FFF);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    position: absolute;
+    left: 1331px;
+    top: 79px;
+}
+.tekst1{
+    color: var(--main-white, #FFF);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    position: absolute;
+    left: 1331px;
+    top: 79px;
+}
+.tekst2{
+    color: var(--main-white, #FFF);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    position: absolute;
+    left: 1331px;
+    top: 123px;
+}
+.tekst3{
+    color: var(--main-white, #FFF);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    position: absolute;
+    left: 1331px;
+    top: 167px;
+}
+.tekst4{
+    color: var(--main-white, #FFF);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    position: absolute;
+    left: 1331px;
+    top: 211px;
+}
+.tekst5{
+    color: var(--main-white, #FFF);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    position: absolute;
+    left: 1537px;
+    top: 79px;
+}
+.tekst6{
+    color: var(--main-white, #FFF);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    position: absolute;
+    left: 1537px;
+    top: 123px;
+}
+.tekst7{
+    color: var(--main-white, #FFF);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    position: absolute;
+    left: 1537px;
+    top: 167px;
+}
+#tekts7{
+    background: var(--gradient-1, linear-gradient(144deg, #FC84FF 0%, #54D1FA 100%));
+}
+a:any-link{
+    color: white;
+    text-decoration: none;
+}
+a:visited{
+    color: white;
+    text-decoration: none;
 }
 /* quests + contact */
 
