--- a/car.css
+++ b/car.css
@@ -76,7 +76,7 @@ select {
 .main{
     width: 100%;
     height: 1896px;
-    background-color:#1A1B1F;
+    background-color:#0F1113;
 }
 .text{
     color: #FFF;
@@ -101,9 +101,8 @@ select {
 .list_box1{
     width: 1207px;
     height: 82px;
-    background-color: #1A1B1F;
+    background-color: #0F1113;
     margin: auto;
-    margin-top: 70px;
     color: #FFF;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 16px;
@@ -112,107 +111,15 @@ select {
     line-height: 140%;
     position: relative;
 }
-.list_box2{
-    width: 1207px;
-    height: 82px;
-    background-color: #1A242E;
-    margin: auto;
-    margin-top: 10px;
-    color: #FFF;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 140%;
-    position: relative;
+#fix{
+    background: linear-gradient(270deg, #1A242E 0%, #1A232D 2.38%, #19232C 5.58%, #19222B 9.56%, #19222A 12.41%, #182129 16.64%, #182028 20.96%, #171F27 24.25%, #171E26 28.66%, #161D24 35.92%, #161C23 39.11%, #151C22 43.18%, #151B21 46.81%, #141A20 52.77%, #13191E 59.86%, #13171C 67.12%, #12171B 70.49%, #12161A 75.24%, #111418 82.41%, #101316 88.46%, #101315 91.92%, #0F1113 100%);
 }
-.list_box3{
-    width: 1207px;
-    height: 82px;
-    background-color: #1A1B1F;
-    margin: auto;
-    margin-top: 10px;
-    color: #FFF;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 140%;
-    position: relative;
-}
-.list_box4{
-    width: 1207px;
-    height: 82px;
-    background-color: #1A242E;
-    margin: auto;
-    margin-top: 10px;
-    color: #FFF;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 140%;
-    position: relative;
-}
-.list_box5{
-    width: 1207px;
-    height: 82px;
-    background-color: #1A1B1F;
-    margin: auto;
-    margin-top: 10px;
-    color: #FFF;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 140%;
-    position: relative;
-}
-.list_box6{
-    width: 1207px;
-    height: 82px;
-    background-color: #1A242E;
-    margin: auto;
-    margin-top: 10px;
-    color: #FFF;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 140%;
-    position: relative;
-}
-#KO{
+.probu{
     position: absolute;
     top: 29px;
     right: 20px;
 }
 .textt1{
-    position: absolute;
-    top: 31px;
-    left: 20px;
-}
-.textt2{
-    position: absolute;
-    top: 31px;
-    left: 20px;
-}
-.textt3{
-    position: absolute;
-    top: 31px;
-    left: 20px;
-}
-.textt4{
-    position: absolute;
-    top: 31px;
-    left: 20px;
-}
-.textt5{
-    position: absolute;
-    top: 31px;
-    left: 20px;
-}
-.textt6{
     position: absolute;
     top: 31px;
     left: 20px;
@@ -253,14 +160,6 @@ select {
     margin-right: 1444px;
     margin-bottom: 15px;
 
-}
-.box2_contact{
-    width: 1207px;
-    height: 50px;
-    border-radius: 5px;
-    border: 1px solid #151D25;
-    background: linear-gradient(90deg, #151D25 0%, #131618 100%);
-    
 }
 .message{
     color: #FFF;
@@ -446,6 +345,9 @@ select {
 }
 #tekts7{
     background: var(--gradient-1, linear-gradient(144deg, #FC84FF 0%, #54D1FA 100%));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 a:any-link{
     color: white;
