--- a/car.css
+++ b/car.css
@@ -71,12 +71,129 @@ select {
 
 
 
+/* partners */
+.main_partners{
+    width: 100%;
+    height: 300px;
+    background-color: #0F1113;
+    position: relative;
+}
+.text_partners{
+    color: #FFF;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.box_partnerov1{
+    width: 173px;
+    height: 92px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 1px solid #151D25;
+    background: linear-gradient(180deg, #151D25 0%, #0F1113 100%);
+    position: absolute;
+    top: 52px;
+    left: 800px;
+}
+.box_partnerov2{
+    width: 173px;
+    height: 92px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 1px solid #151D25;
+    background: linear-gradient(180deg, #151D25 0%, #0F1113 100%);
+    position: absolute;
+    top: 52px;
+    left: 993px;
+}
+.box_partnerov3{
+    width: 173px;
+    height: 92px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 1px solid #151D25;
+    background: linear-gradient(180deg, #151D25 0%, #0F1113 100%);
+    position: absolute;
+    top: 52px;
+    left: 1186px;
+}
+.box_partnerov4{
+    width: 173px;
+    height: 92px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 1px solid #151D25;
+    background: linear-gradient(180deg, #151D25 0%, #0F1113 100%);
+    position: absolute;
+    top: 52px;
+    left: 1379px;
+}
+.box_partnerov5{
+    width: 173px;
+    height: 92px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 1px solid #151D25;
+    background: linear-gradient(180deg, #151D25 0%, #0F1113 100%);
+    position: absolute;
+    top: 52px;
+    left: 1572px;
+}
+.box_partnerov6{
+    width: 173px;
+    height: 92px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 1px solid #151D25;
+    background: linear-gradient(180deg, #151D25 0%, #0F1113 100%);
+    position: absolute;
+    top: 164px;
+    left: 897px;
+}
+.box_partnerov7{
+    width: 173px;
+    height: 92px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 1px solid #151D25;
+    background: linear-gradient(180deg, #151D25 0%, #0F1113 100%);
+    position: absolute;
+    top: 164px;
+    left: 1090px;
+    margin: auto;
+}
+.box_partnerov8{
+    width: 173px;
+    height: 92px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 1px solid #151D25;
+    background: linear-gradient(180deg, #151D25 0%, #0F1113 100%);
+    position: absolute;
+    top: 164px;
+    left: 1283px;
+}
+.box_partnerov9{
+    width: 173px;
+    height: 92px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 1px solid #151D25;
+    background: linear-gradient(180deg, #151D25 0%, #0F1113 100%);
+    position: absolute;
+    top: 164px;
+    left: 1476px;
+}
 /* quests + contact */
 
 .main{
     width: 100%;
     height: 1896px;
     background-color:#0F1113;
+    margin-top: 100px;
 }
 .text{
     color: #FFF;
