--- a/car.css
+++ b/car.css
@@ -71,10 +71,10 @@ select {
 /* team */
 .main_team{
     width: 100%;
-    height: 398px;
     background-color: #0F1113;
     margin-top: 50px;
     position: relative;
+    padding-bottom: 343px;
 }
 .text_team{
     color: #FFF;
@@ -101,30 +101,7 @@ select {
     border: 1px solid #151D25;
     background: linear-gradient(180deg, #151D25 0%, #0F1113 100%);
     position: relative;
-}
-.team2{
-    width: 280px;
-    height: 215px;
-    flex-shrink: 0;
-    border: 1px solid #151D25;
-    background: linear-gradient(180deg, #151D25 0%, #0F1113 100%);
-    position: relative;
-}
-.team3{
-    width: 280px;
-    height: 215px;
-    flex-shrink: 0;
-    border: 1px solid #151D25;
-    background: linear-gradient(180deg, #151D25 0%, #0F1113 100%);
-    position: relative;
-}
-.team4{
-    width: 280px;
-    height: 215px;
-    flex-shrink: 0;
-    border: 1px solid #151D25;
-    background: linear-gradient(180deg, #151D25 0%, #0F1113 100%);
-    position: relative;
+    margin-top: 30px;
 }
 .imya_team1{
     color: #FFF;
@@ -238,12 +215,30 @@ select {
     text-align: center;
     display: block;
 }
+.absolute_team{
+    width: 147px;
+    height: 24px;
+    position: absolute;
+    top: 171px;
+    left: 67px;
+    gap: 17px;
+    margin-bottom: 22px;
+    display: flex;
+}
 /* partners */
 .main_partners{
     width: 100%;
     height: 300px;
     background-color: #0F1113;
     position: relative;
+}
+.partners{
+        width: 100%;
+    display: flex;
+    gap: 30px;
+    margin: auto;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 .text_partners{
     color: #FFF;
@@ -405,7 +400,6 @@ select {
     width: 100%;
     height: 1896px;
     background-color:#0F1113;
-    margin-top: 100px;
 }
 .text{
     color: #FFF;
