--- a/car.css
+++ b/car.css
@@ -69,10 +69,17 @@ select {
 }
 
 /* team */
+.lin{
+    width: 1205px;
+    height: 2px;
+    background-color: #151D25;
+    margin: auto;
+    border-radius: 5px;
+    margin-bottom: 77px;
+}
 .main_team{
     width: 100%;
     background-color: #0F1113;
-    margin-top: 50px;
     position: relative;
     padding-bottom: 343px;
 }
@@ -228,7 +235,7 @@ select {
 /* partners */
 .main_partners{
     width: 100%;
-    height: 300px;
+    height: 479px;
     background-color: #0F1113;
     position: relative;
 }
